fixed styles, header is now stuck to top on scroll, repositioned skillcards, education and contactlinks are now on one row on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 
 .bg {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position:static;
     overflow-x: hidden;
     background:-webkit-linear-gradient(#1b2430be, #D6D5A8, #816797, #34455b);
     background-size: cover;
