--- a/src/components/Home/intro.css
+++ b/src/components/Home/intro.css
@@ -7,11 +7,10 @@
 .intro-container {
     display: flex;
     flex-direction: column;
-    /*border: 1px solid black;*/
     justify-content:space-evenly;
     align-items: center;
     padding: 40px;
-    margin-bottom: 50px;
+    margin: 50px;
 }
 
 .greeting-container {
